fix postform align

--- a/src/static/css/gaech.css
+++ b/src/static/css/gaech.css
@@ -186,7 +186,7 @@ border: 1px solid #999;
 -webkit-border-radius: 10px;
 -webkit-box-shadow: 0px 0px 5px #BBB;
 padding: 0px 13px 10px 13px;
-margin-left: 1em;
+margin-left: 30px;
 font-size: 82%;
 margin-right: 5px;
 width: 500px;
